--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/style.css" type="text/css">
     <link rel="stylesheet" href="http://openlayers.org/dev/theme/default/google.css" type="text/css">
     <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   </head>
   <body>
     <div class="menu">
